clang/test/BSC/Negative/InitAnalysis/init-ensure-init-caller-partial.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test ensure_init caller side: partial field init leaves other fields uninitialized.

struct Pair { int a; int b; };
void init_int(int *__attribute__((ensure_init)) out);

_Safe void test_field_partial(void) {
    struct Pair p;
    _Unsafe { init_int(&p.a); }
    int y = p.a;
    int z = p.b; // expected-error {{use of uninitialized value: `p.b`}}
}
